# deeprecall-mcp

./: .gitignore  CLAUDE.md.example  README.md  __init__.py  pyproject.toml
deeprecall_mcp/: server.py
